Final version of LoopExample.ipynb

--- a/notebooks/LoopExample.ipynb
+++ b/notebooks/LoopExample.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we try the loop from lecture. If it calculated the sum above correctly, it should give 11, as we evaluate $f(x)$ at the 11 points 0, 0.1, 0.2 $\\dots$ 1.0, but it doesn't: it gives 12 instead becasue it adds $f(1.1)$ into the sum."
+    "Now we try the loop from the lecture notes. If it calculated the sum above correctly, it should give $I = 11$, as we evaluate $f(x)$ at the 11 points 0, 0.1, 0.2 $\\dots$ 1.0, but it doesn't: it gives 12 instead becasue it adds $f(1.1)$ into the sum."
    ]
   },
   {
@@ -93,13 +93,10 @@
     "$$\n",
     " I_N = \\sum_{i=0}^{N} f(x_i), \\quad \\quad x_i = i\\times (1/N)  \n",
     "$$\n",
-    "so that we take $N$ steps across the closed interval $[0,1]$. \n",
+    "so that we take $N$ equally-spaced steps across the closed interval $[0,1]$. \n",
     "\n",
-    "As above, we'll define \n",
-    "$\n",
-    " f(x) = 1\n",
-    "$\n",
-    "so that the sum $I_N$ will count the number of points $x_i$. That is, if $f(x) = 1$ for all $x \\in [0,1]$, then $I_N = N + 1.$"
+    "As above, we'll define $f(x) = 1$ so that the sum $I_N$ will count the number of points $x_i$. \n",
+    "That is, if $f(x) = 1$ for all $x \\in [0,1]$, then $I_N = N + 1.$"
    ]
   },
   {
