--- a/notebooks/LoopExample.ipynb
+++ b/notebooks/LoopExample.ipynb
@@ -8,13 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -58,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we try the loop from the lecture notes. If it calculated the sum above correctly, it should give $I = 11$, as we evaluate $f(x)$ at the 11 points 0, 0.1, 0.2 $\\dots$ 1.0, but it doesn't: it gives 12 instead becasue it adds $f(1.1)$ into the sum."
+    "Now we try the loop from the lecture notes. If it calculated the sum above correctly, it should give $I = 11$, as we evaluate $f(x)$ at the 11 points 0, 0.1, 0.2 $\\dots$ 1.0, but it doesn't: it gives 12 instead because it adds $f(1.1)$ into the sum."
    ]
   },
   {
