--- a/notebooks/LoopExample.ipynb
+++ b/notebooks/LoopExample.ipynb
@@ -117,7 +117,7 @@
    ],
    "source": [
     "# This time we'll package the loop up into a function \n",
-    "# that we can test for various value of N\n",
+    "# that we can test for various values of N\n",
     "def sumLoop(N):\n",
     "    h = 1/N\n",
     "    x = 0\n",
