Prep for Week 1 labs

--- a/MATH60082-coding-support-class-1.ipynb
+++ b/MATH60082-coding-support-class-1.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "source": [
     "# Coding Support Class - Part 1\n",
-    "## Dr P. V. Johnson\n",
+    "## M. Muldoon (original version by P. V. Johnson)\n",
     "## Department of Mathematics\n",
     "\n",
     "**Many thanks** to Chris Johnson, Stefan Güttel and others for access to the [Level 2 Python Course](https://personalpages.manchester.ac.uk/staff/chris.johnson/python/) developed here in Manchester. Please feel free to explore the resources on the linked site."
@@ -46,13 +46,13 @@
     "## What is a program?\n",
     "\n",
     "A program is sequence of instructions to enable a computer to complete a task.\n",
-    "- Computers can **remember** programs\n",
-    "- Originally programs had to be written in machine code --- _low-level_\n",
+    "- Computers can **store** programs\n",
+    "- Originally programs had to be written in machine code &mdash; _low-level_\n",
     "- Now we write programs in code\n",
     "- _and let the computer write the machine code for us!_\n",
     "- C/C++ are best described as mid-level languages\n",
     "- Higher-level languages include java, Fortran and others.\n",
-    "- Scripting languages are now very popular"
+    "- Scripting languages such as Python are now very popular"
    ]
   },
   {
@@ -62,10 +62,10 @@
    "source": [
     "## Why Python?\n",
     "\n",
-    "- Python is widely chosen for its readability, simplicity, and versatility -- it is good both for beginners and experts\n",
-    "- Has extensive libraries and community support -- especially in Scientific Computing, data science, and artificial intelligence.\n",
+    "- Python is widely chosen for its readability, simplicity, and versatility &mdash; it is good both for beginners and experts\n",
+    "- Has extensive libraries and community support &mdash; especially in Scientific Computing, data science, and artificial intelligence.\n",
     "- Highly portable, can be quickly installed and run on almost any machine\n",
-    "- Compiles on the fly making it easier to get results\n",
+    "- Compiles on the fly making it easier to get results $$\\dots$$\n",
     "- but easier to make mistakes (of the kind you can't spot).\n"
    ]
   },
@@ -175,7 +175,7 @@
     "~~~\n",
     "#!/usr/bin/env python3\n",
     "~~~\n",
-    "  This has no meaning on Windows, but it makes your programs easier to run on Linux and Mac OSX.\n",
+    "  This has no meaning on Windows, but it makes your programs easier to run on Linux and MacOS X.\n",
     "- Right after that, a description what the program does, possibly with some other info (system requirements, authors name and contact, etc.), between the triple quotation marks. This is called a docstring."
    ]
   },
@@ -203,8 +203,8 @@
    "source": [
     "# Tasks\n",
     "\n",
-    "- Open up VSCode and run a simple program ([see MATH60082 running vscode](https://github.com/pjohno/MATH60082-python/blob/main/MATH60082-running-vscode.ipynb))\n",
-    "- Try opening up a notebook and running some simple code ([see MATH60082 running notebooks](https://github.com/pjohno/MATH60082-python/blob/main/MATH60082-running-notebooks.ipynb))"
+    "- Open up VSCode and run a simple program ([see MATH60082 running vscode](https://github.com/VenetianRed/MATH60082-python/blob/main/MATH60082-running-vscode.ipynb))\n",
+    "- Try opening up a notebook and running some simple code ([see MATH60082 running notebooks](https://github.com/VenetianRed/MATH60082-python/blob/main/MATH60082-running-notebooks.ipynb))"
    ]
   },
   {
@@ -273,12 +273,12 @@
    "source": [
     "## Simple types\n",
     "\n",
-    "- **int** -- Integer -- we use these to **count**.\n",
-    "- **float** -- Number -- generally, what you'd consider a real number in mathematics.\n",
-    "- **complex** -- Complex Number -- what you'd expect\n",
-    "- **str** -- string -- a text. For example: \"word\", \"This is a mighty deep, philosophical sentence.\", \"ŞƿҿÇïåĿ sɹǝʇɔɐɹɐɥɔ\", \"17\", ... The so-called empty string, \"\", has no characters (its length is zero).\n",
-    "- **bool** -- Boolean -- truth values (True and False).\n",
-    "- **NoneType** -- Unspecified -- the type of a special constant None that means \"no value\".\n",
+    "- **int** &mdash; Integer &mdash; we use these to **count**.\n",
+    "- **float** &mdash; Number &mdash; generally, what you'd consider a real number in mathematics.\n",
+    "- **complex** &mdash; Complex Number &mdash; what you'd expect\n",
+    "- **str** &mdash; string &mdash; a text. For example: \"word\", \"This is a mighty deep, philosophical sentence.\", \"ŞƿҿÇïåĿ sɹǝʇɔɐɹɐɥɔ\", \"17\", ... The so-called empty string, \"\", has no characters (its length is zero).\n",
+    "- **bool** &mdash; Boolean &mdash; truth values (True and False).\n",
+    "- **NoneType** &mdash; Unspecified &mdash; the type of a special constant None that means \"no value\".\n",
     "    This is not a zero (a number), nor an empty string, nor anything else! None is different from any other constant and any other value that a variable can get.\n"
    ]
   },
@@ -287,20 +287,28 @@
    "id": "f92374cb-3713-40a9-8a15-ff4b57c641cc",
    "metadata": {},
    "source": [
-    "Be careful assigning variables -- especially in maths!"
+    "Be careful assigning variables &mdash; especially in maths!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "258e85cd-8f9a-45ad-a680-620ecc25d54c",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "x:  3\n",
+      "y:  2\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 + 3 = 23\n"
+      "3 + 2 = 32\n"
      ]
     }
    ],
@@ -317,7 +325,7 @@
    "source": [
     "## What just happened here?\n",
     "\n",
-    "The user types two numbers, which are saved -- as two strings -- in variables x and y. Then the program writes out (among other things) the value of x+y.\n",
+    "The user types two numbers, which are saved &mdash; as two strings &mdash; in variables x and y. Then the program writes out (among other things) the value of x+y.\n",
     "\n",
     "How would we \"add\" one string to another in the real world?\n",
     "\n",
@@ -331,7 +339,7 @@
     "\n",
     "It would be very bad if Python looked at these and decided that they were numbers only because they have nothing but digits. Maybe we want them concatenated (as opposed to adding them one to another)!\n",
     "\n",
-    "So, the result is -- by now no longer surprisingly -- \"1719\", because the strings' addition + is a concatenation, regardless of the value of the strings in question.\n",
+    "So, the result is &mdash; by now no longer surprisingly &mdash; \"1719\", because the strings' addition + is a concatenation, regardless of the value of the strings in question.\n",
     "\n",
     "How do we tell Python to \"treat these two variables as numbers\"?\n"
    ]
@@ -459,7 +467,7 @@
     "        <td>//</td><td>Floor division</td><td>x // y</td>\n",
     "    </tr>\n",
     "</table>\n",
-    "Most of the operators in the above table have the same meaning as in mathematics (for those knowing C: / means the usual, i.e., real division). The three not used in mathematics are defined as follows:\n",
+    "Most of the operators in the above table have the same meaning as in mathematics (for those who know C: / means the usual, i.e., real division). The three not used in mathematics are defined as follows:\n",
     "\n",
     "- `x // y` means floored quotient of x and y (also called integer division)\n",
     "- `x % y` means the remainder of x/y\n",
@@ -487,7 +495,7 @@
     "$$\n",
     "a = 1.17745, \\quad b=3, \\quad c=-1004.1, \\text{ and } x = 24.539~.\n",
     "$$\n",
-    "Use brackets to order the calculations. Try assigning the variables as `int`, `float` or `str` -- what happens?\n"
+    "Use brackets to order the calculations. Try assigning the variables as `int`, `float` or `str` &mdash; what happens?\n"
    ]
   },
   {
@@ -559,15 +567,15 @@
    "id": "885cc194-e0c8-44bf-97f4-0a920b9fae83",
    "metadata": {},
    "source": [
-    "# Finding BUGs\n",
+    "# Finding Bugs\n",
     "\n",
-    "- it is very difficult to write code without coming across errors\n",
-    "- main types of error you will come across:\n",
+    "- It is very difficult to write code without making mistakes.\n",
+    "- The main types of error you will come across:\n",
     "    - syntax errors (easiest to spot and fix)\n",
     "    - data errors (accessing the wrong value, or values out of range)\n",
     "    - logical errors (doing things in the wrong order)\n",
-    "    - runtime errors (specific to when program is run, i.e. checking user input etc)\n",
-    "- the IDE or notebook environment can help fix some errors -- but often you will need to run tests and check values line by line"
+    "    - runtime errors (specific to when program is run, i.e. checking user input etc.)\n",
+    "- the IDE or notebook environment can help fix some errors &mdash; but often you will need to run tests and check values line by line."
    ]
   },
   {
@@ -614,7 +622,7 @@
     "\n",
     "<img src=\"images/math60082-support-1-3.png\" alt=\"image\" width=\"25%\" height=\"auto\">\n",
     "\n",
-    "so we can see that `maths` is not a module that can be found. Either you have spelt the name wrong for the module you want, or the required module is not installed. Python does not know which it is -- You have to work it out! In this case we miss spelled `math` module, and to access `pi` we need to write `math.pi`. The syntax of this program is now correct.\n"
+    "so we can see that `maths` is not a module that can be found. Either you have spelt the name wrong for the module you want, or the required module is not installed. Python does not know which it is &mdash; You have to work it out! In this case we miss spelled `math` module, and to access `pi` we need to write `math.pi`. The syntax of this program is now correct.\n"
    ]
   },
   {
