--- a/MATH60082-installing-anaconda.ipynb
+++ b/MATH60082-installing-anaconda.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Installing Anaconda on Windows\n",
     "\n",
-    "This guide gives the installation process for windows, but the process on other operating systems is very similar. Once anaconda is installed, the way things work inside it, and for example VSCode (Spyder or any other app launched inside), is almost the same.\n",
+    "This guide shows the installation process for Windows machines, but the process on other operating systems is very similar. Once anaconda is installed, the way things work inside it, and for example VSCode (or Spyder or any other app launched inside), is almost the same.\n",
     "\n",
     "- First go to Anaconda webpage and download the latest version for your system\n",
     "\n",
@@ -100,10 +100,24 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python [conda env:base] *",
+   "language": "python",
+   "name": "conda-base-py"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
