--- a/MATH60082-coding-support-class-2.ipynb
+++ b/MATH60082-coding-support-class-2.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "source": [
     "# Coding Support Class - Part 2\n",
-    "## Dr P. V. Johnson\n",
+    "## M. Muldoon (original version by P. V. Johnson)\n",
     "## Department of Mathematics\n",
     "\n",
     "**Many thanks** to Chris Johnson, Stefan Güttel and others for access to the [Level 2 Python Course](https://personalpages.manchester.ac.uk/staff/chris.johnson/python/) developed here in Manchester. Please feel free to explore the resources on the linked site."
@@ -544,9 +544,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -558,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
