--- a/MATH60082-coding-workbook-1.ipynb
+++ b/MATH60082-coding-workbook-1.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# Coding Workbook 1\n",
     "\n",
-    "## Dr P. V. Johnson\n",
+    "## M. Muldoon (original version by P. V. Johnson)\n",
     "## Department of Mathematics\n"
    ]
   },
@@ -108,7 +108,7 @@
    "id": "a6d49713",
    "metadata": {},
    "source": [
-    "4. A student is asked to write a code where the user is promted to input the current year, and it then calculates how many years since Manchester United last won the Premier League. Fix any errors in the student's code which can be found [here (click to download)](https://raw.githubusercontent.com/pjohno/MATH60082-python/main/examples/MATH60082-support-example-3.py)."
+    "4. A student is asked to write a code where the user is promted to input the current year, and it then calculates how many years since Manchester United last won the Premier League. Fix any errors in the student's code which can be found [here (click to download)](https://raw.githubusercontent.com/VenetianRed/MATH60082-python/main/examples/MATH60082-support-example-3.py)."
    ]
   },
   {
