--- a/MATH60082-coding-workbook-2.ipynb
+++ b/MATH60082-coding-workbook-2.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Coding Workbook 2\n",
     "\n",
-    "## Dr P. V. Johnson\n",
+    "## M. Muldoon (original version by P. V. Johnson)\n",
     "## Department of Mathematics\n"
    ]
   },
@@ -120,15 +120,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
