--- a/solutions/SLTN-coding-workbook-1.ipynb
+++ b/solutions/SLTN-coding-workbook-1.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# Solutions to Coding Workbook 1\n",
     "\n",
-    "## Dr P. V. Johnson\n",
+    "## M. Muldoon (original version by P. V. Johnson)\n",
     "## Department of Mathematics\n"
    ]
   },
@@ -273,9 +273,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -287,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
