--- a/solutions/SLTN-coding-workbook-2.ipynb
+++ b/solutions/SLTN-coding-workbook-2.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Solutions to Coding Workbook 2\n",
     "\n",
-    "## Dr P. V. Johnson\n",
+    "## M. Muldoon (original version by P. V. Johnson)\n",
     "## Department of Mathematics\n"
    ]
   },
@@ -61,7 +61,7 @@
     "    print(\"Roots are complex\")\n",
     "    print(\"x+ = \",-b/a/2.,\" + \",sqrt(-dtmnnt)/a/2.0,\"i\")   \n",
     "    print(\"x- = \",-b/a/2.,\" - \",sqrt(-dtmnnt)/a/2.0,\"i\")\n",
-    "elif dtmnnt == 0.0: # compare if something is equal use ==\n",
+    "elif dtmnnt == 0.0: # compare whether two things are equal with ==\n",
     "    print(\"Single root\")\n",
     "    print(\"x= \",-b/2.0/a)\n",
     "else:\n",
@@ -493,9 +493,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -507,9 +507,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
