Updated material for the first two weeks
Got rid of author names on notebooks and fixed a link to the Level-2 python course materials. Chris Johnson has taken his copy down, so I linkwd to Stefan Güttel’s older version.

--- a/MATH60082-coding-support-class-2.ipynb
+++ b/MATH60082-coding-support-class-2.ipynb
@@ -16,10 +16,8 @@
    "metadata": {},
    "source": [
     "# Coding Support Class - Part 2\n",
-    "## M. Muldoon (original version by P. V. Johnson)\n",
-    "## Department of Mathematics\n",
     "\n",
-    "**Many thanks** to Chris Johnson, Stefan Güttel and others for access to the [Level 2 Python Course](https://personalpages.manchester.ac.uk/staff/chris.johnson/python/) developed here in Manchester. Please feel free to explore the resources on the linked site."
+    "**Many thanks** to Chris Johnson, Stefan Güttel and others for access to the [Level 2 Python Course](https://personalpages.manchester.ac.uk/staff/stefan.guettel/py/) developed here in Manchester. Please feel free to explore the resources on the linked site."
    ]
   },
   {
