--- a/solutions/SLTN-coding-workbook-1.ipynb
+++ b/solutions/SLTN-coding-workbook-1.ipynb
@@ -15,10 +15,7 @@
    "id": "cb68fb26-8f7e-4bfd-a52a-e26eea2c3033",
    "metadata": {},
    "source": [
-    "# Solutions to Coding Workbook 1\n",
-    "\n",
-    "## M. Muldoon (original version by P. V. Johnson)\n",
-    "## Department of Mathematics\n"
+    "# Solutions to Coding Workbook 1"
    ]
   },
   {
