--- a/solutions/SLTN-coding-workbook-2.ipynb
+++ b/solutions/SLTN-coding-workbook-2.ipynb
@@ -13,10 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solutions to Coding Workbook 2\n",
-    "\n",
-    "## M. Muldoon (original version by P. V. Johnson)\n",
-    "## Department of Mathematics\n"
+    "# Solutions to Coding Workbook 2"
    ]
   },
   {
