--- a/MATH60082-coding-workbook-2.ipynb
+++ b/MATH60082-coding-workbook-2.ipynb
@@ -13,10 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Coding Workbook 2\n",
-    "\n",
-    "## M. Muldoon (original version by P. V. Johnson)\n",
-    "## Department of Mathematics\n"
+    "# Coding Workbook 2"
    ]
   },
   {
