Reviewed the materials for the support classes

--- a/MATH60082-coding-support-class-2.ipynb
+++ b/MATH60082-coding-support-class-2.ipynb
@@ -49,7 +49,7 @@
     "- Functions - how and where to use them\n",
     "- Pointers - pass by reference\n",
     "### Aims:\n",
-    "- Use functions, loops and if statement to control a program.\n",
+    "- Use functions, loops and `if` statements to control a program.\n",
     "- Understand how to pass data between functions"
    ]
   },
@@ -93,7 +93,7 @@
    "id": "601db8a4-72f6-41c9-9744-765e3f6813a8",
    "metadata": {},
    "source": [
-    "To execute more than one command on an `if` condition use indentations\n"
+    "To execute more than one command on an `if` condition use indentation:"
    ]
   },
   {
@@ -130,13 +130,13 @@
    "source": [
     "# Tasks\n",
     "\n",
-    "- Write a function that takes the arguments $a$, $b$ and $c$, computes and then displays the roots\n",
+    "Write a function that takes the arguments $a$, $b$ and $c$, then computes and displays the roots\n",
     "of the quadratic equation\n",
     "$$\n",
     "ax^2 + bx + c =0\n",
     "$$\n",
     "You will need to identify whether the roots are real or complex. If the roots are complex,\n",
-    "display the results in the form $A + Bi$.\n"
+    "display the results in the form $A + Bi$."
    ]
   },
   {
@@ -146,7 +146,7 @@
    "source": [
     "## For loops\n",
     "\n",
-    "Most common type of loop we use in numerical algorithms is the definitive type. There are hardly any situations in numerics where you wouldn't want to put a limit on the number of times you would want to do something unlike other common tasks.\n",
+    "The most common type of loop we'll use in numerical algorithms runs for a fixed number of cycles. There are hardly any situations in numerics where you wouldn't want to put a limit on the number of times you would want to do something, unlike other common tasks.\n",
     "\n",
     "The syntax in python is\n",
     "~~~\n",
@@ -157,7 +157,7 @@
     "~~~\n",
     "for i in range(10):\n",
     "~~~\n",
-    "where this will iterate the loop 10 times, starting with `i=0` and ending with `i=9`.\n",
+    "where this will run through the loop 10 times, starting with `i=0` and ending with `i=9`.\n",
     "    "
    ]
   },
@@ -208,8 +208,7 @@
     "You can easily change the range by giving a start and finish value, for example\n",
     "~~~\n",
     "range(1,n) # goes from 1,2,...,n-1\n",
-    "~~~\n",
-    "This is supposed to mimic the input to a standard _C_ loop."
+    "~~~"
    ]
   },
   {
@@ -221,18 +220,18 @@
     "\n",
     "As stated above we will normally want to limit the maximum number of times we do something, but we may also want to finsh early if some condition  is met, i.e. a solution has been found. You can break from a loop with the `break` command. Say we want to calculate the infinite sum\n",
     "$$\n",
-    "S = \\sum_{i=1}^\\infty \\frac{1}{2^i + 1},\n",
+    "S = \\sum_{i=1}^\\infty \\frac{1}{2^i + 1}\n",
     "$$\n",
-    "we know this is a convergent series. Starting at $i=1$ each term subsequent, the next term is smaller than the last, so to check for convergence we can stop when\n",
+    "and we know this is a convergent series. Starting with $i=1$ each subsequent term is smaller than the onr before it, so to check for convergence we can stop when\n",
     "$$\n",
     "\\frac{1}{2^i+1} < \\epsilon\n",
     "$$\n",
-    "where $\\epsilon>0$ is our tolerance."
+    "where $\\epsilon>0$ is some tolerance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "ceb076da-1751-434c-a206-aef16d162167",
    "metadata": {},
    "outputs": [
@@ -240,7 +239,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Exit after  20  loops, S:= 0.7644988266744308\n"
+      " Exit after  20  terms, S:= 0.7644988266744308\n"
      ]
     }
    ],
@@ -252,7 +251,7 @@
     "    term = 1.0 / (2**i + 1)\n",
     "    sum = sum + term\n",
     "    if term < tol:\n",
-    "        print(\" Exit after \",i,\" loops, S:=\",sum)\n",
+    "        print(\" Exit after \",i,\" terms, S:=\",sum)\n",
     "        break"
    ]
   },
@@ -397,7 +396,7 @@
     "- don't forget to close the file when you are finished\n",
     "- Some objects in python already have automatic ways to write into csv format, for example `numpy`, please look them up before writing yourself\n",
     "- See the [Python Documentation on strings](https://docs.python.org/3/library/string.html#formatstrings) for more details on formatting\n",
-    "- Although this website: [https://pyformat.info/](https://pyformat.info/) gives more practical explanations that are a bit easier to understand."
+    "- [https://pyformat.info/](https://pyformat.info/) provides practical explanations that are sometimes easier to understand."
    ]
   },
   {
@@ -440,9 +439,9 @@
    "source": [
     "## Objects\n",
     "\n",
-    "- Data in python is stored in objects or classes.\n",
-    "- In the example above, it would be better if somehow the $\\Gamma$ function and the $\\phi$ function could be aware of the value of $\\lambda_b$ and $\\lambda_s$, without adding them to the parameter list.\n",
-    "- We want to code with $\\phi(\\eta,\\xi)$, not $\\phi(\\eta,\\xi,\\lambda_b,\\lambda_s)$, especially in problems with lots of parameters.\n",
+    "- Data in python is stored in *objects* or *classes*.\n",
+    "- In the example above, it would be better if somehow the functions $\\Gamma$ and  $\\phi$ could be aware of the values of $\\lambda_b$ and $\\lambda_s$, without adding them to the parameter list.\n",
+    "- That is, we'd like to code with $\\phi(\\eta,\\xi)$, not $\\phi(\\eta,\\xi,\\lambda_b,\\lambda_s)$, especially in problems with lots of parameters.\n",
     "- Classes allow us to store data alongside functions, so we create a structure to store the values of $\\lambda_*$ and the functions together, so they are aware of each other."
    ]
   },
@@ -466,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "52ffd3b9-5fc4-45a2-8401-650ac7a0d797",
    "metadata": {},
    "outputs": [],
@@ -475,14 +474,17 @@
     "class GammaFunction:\n",
     "    # import some functions from the math library\n",
     "    from math import exp,sin,sqrt\n",
-    "    # use the initialisation function to set value of lambda_s and lambda_b\n",
+    "    \n",
+    "    # When initialising a member of the class, set values of lambda_s and lambda_b once and for all\n",
     "    def __init__(self, lambda_b, lambda_s):\n",
     "        # good idea to make sure values here are floats\n",
     "        self.lambda_b = float(lambda_b)\n",
     "        self.lambda_s = float(lambda_s)\n",
+    "        \n",
     "    # definition of the phi function\n",
     "    def phi(self, eta, xi):\n",
     "        return self.exp( -self.lambda_b*eta)*self.exp( -self.lambda_s*xi )\n",
+    "        \n",
     "    # definition of the value function Gamma(x,t)\n",
     "    def value(self, x, t):\n",
     "        return ( 1 - self.phi(x*x*t,self.sqrt(t)) ) + self.sin( self.phi( 1./t , x/t/t ) )"
@@ -494,21 +496,21 @@
    "metadata": {},
    "source": [
     "In the class declaration, we have:\n",
-    "- an import command to get some functions we need to execute the program.\n",
+    "- an `import` command to get mathematical functions we need when computing $\\Gamma$ and $\\phi$.\n",
     "- `__init__` function to set the initial values.\n",
-    "- the variable `self` refers to the _instance_ of the object, so variables such as `self.lambda_b` can have a different value in every instance. Functions that have `self` as a parameter are declared to be dependent on each instance, so in other words they are not `static`. Other languages do this the other way around so the default is non-static, and you have to explicitly say when functions are static.\n",
-    "- function definitions `phi` and `value` do the calculations\n",
+    "- the variable `self` refers to the _instance_ of the object, so variables such as `self.lambda_b` can have a different value in every instance. Functions that have `self` as a parameter are declared to be dependent on each instance, so in other words they are not `static` (the same in every instance). Other languages do this the other way around so the default is non-static, and you have to explicitly say when functions are static.\n",
+    "- definitions of `phi` and `value` that compute, respectively, $\\phi(\\eta,\\xi)$ and $\\Gamma(x,t)$.\n",
     "\n",
     "To use this we write\n",
     "~~~\n",
     "<object name> = GammaFunction( <value of lambda_b> , <value of lambda_s> )\n",
     "~~~\n",
-    "and every time we do this the value of $\\lambda_b$ and $\\lambda_s$ will be set in the object. The way this class is written, the value of lambda_s and lambda_b **cannot** be changed after initialisation."
+    "and every time we do this the value of $\\lambda_b$ and $\\lambda_s$ will be stored in the object. The way this class is written, the values of lambda_s and lambda_b **cannot** be changed after initialisation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "ff406a50-bf27-457c-a9d8-9d97f66b9fd7",
    "metadata": {},
    "outputs": [
@@ -523,7 +525,9 @@
    "source": [
     "from math import pi,sqrt\n",
     "\n",
-    "G = GammaFunction( 1.3 , 0.26 )\n",
+    "my_lambda_b = 1.3\n",
+    "my_lambda_s = 0.26\n",
+    "G = GammaFunction( my_lambda_b, my_lambda_s )\n",
     "print( G.value( pi*pi , sqrt(3.) ) )"
    ]
   },
@@ -536,8 +540,16 @@
     ]
    },
    "source": [
-    "You do not need to write your own classes in this course unit, but they will help in some circumstances. If classes are provided in class or tutorials, you are free to use those in your solutions. You will need to know how to use other classes (or objects) provided in the standard libraries."
+    "You do not need to write your own classes in this course unit, but they may help in some circumstances. If classes are provided in lectures or tutorials, you are free to use those in your solutions. You will also need to know how to use other classes (or objects) provided in the standard libraries."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3db9193-67ed-4c25-a489-06bf6c570368",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
