--- a/MATH60082-coding-support-class-1.ipynb
+++ b/MATH60082-coding-support-class-1.ipynb
@@ -94,10 +94,10 @@
     "if x==1:\n",
     "    # line inside the if statement are indented\n",
     "    print(\"All of these statements\")\n",
-    "    print(\"will be executed conditional\")\n",
-    "    print(\"on x=1\")\n",
+    "    print(\"will be executed if x equals 1,\")\n",
+    "    print(\"but not otherwise.\")\n",
     "# unindented means block ended\n",
-    "print(\"This always prints regardless\")\n",
+    "print(\"This always prints regardless of the value of x\")\n",
     "~~~\n"
    ]
   },
@@ -180,7 +180,9 @@
   {
    "cell_type": "markdown",
    "id": "c2680efd-3273-41e3-9804-ce459afc247d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## IDE or Notebooks\n",
     "\n",
@@ -189,7 +191,7 @@
     "- The two recommended peices of software are:\n",
     "    - Spyder \n",
     "    - Visual Studio Code\n",
-    "- Both programs are available on Mac, Linux and Windows.\n",
+    "- Both programs are available for MacOS, Linux and Windows.\n",
     "- For our purposes in this course, it will **not** matter on which platform you write the code.\n",
     "- See Blackboard area for guides on installing and running python on different platforms."
    ]
@@ -250,7 +252,7 @@
     "## Variables\n",
     "\n",
     "- Variables are used to store and retrieve data\n",
-    "- Every variable has a value (which, in Python, can be undefined) and a type (partly hidden in Python)."
+    "- Every variable has a *value* (which, in Python, can be undefined) and a *type* (partly hidden in Python)."
    ]
   },
   {
@@ -261,7 +263,7 @@
     "## What is in a name?\n",
     "\n",
     "- Each variable requires a unique name (in the same scope)\n",
-    "- Once your programs become bigger this is harder than it sounds"
+    "- Once your programs become bigger, this can become harder than it sounds"
    ]
   },
   {
@@ -298,15 +300,15 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "x:  3\n",
-      "y:  2\n"
+      "x:  19\n",
+      "y:  59\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 + 2 = 32\n"
+      "19 + 59 = 1959\n"
      ]
     }
    ],
@@ -323,23 +325,23 @@
    "source": [
     "## What just happened here?\n",
     "\n",
-    "The user types two numbers, which are saved &mdash; as two strings &mdash; in variables x and y. Then the program writes out (among other things) the value of x+y.\n",
+    "The user typed two numbers, which were saved &mdash; as two *strings* &mdash; in variables `x` and `y`. Then the program then wrote out (among other things) the value of `x+y`, which is a string formed by pating `x` and `y` together.\n",
     "\n",
-    "How would we \"add\" one string to another in the real world?\n",
+    "That is, we &ldquo;add&rdquo; one string to another by concatenating them.\n",
     "\n",
-    "For example, if x = \"Bruce\" and y = \"Wayne\", what would x + y be?\n",
+    "For example, if `x = \"Bruce\"` and `y = \"Wayne\"`, what would `x + y` be?\n",
     "\n",
-    "(It may come as a little surprise that \"x + y\" will not produce \"Batman\". Python is a well defined language that keeps Bruce's secret identity well hidden.)\n",
+    "(It may come as a little surprise that `x + y` will not produce `Batman`. Python is a well defined language that keeps Bruce's secret identity well hidden.)\n",
     "\n",
-    "The result of x+y will be \"BruceWayne\". Notice that there is no additional space here: the strings are glued (concatenated) one to another, with no extra separators!\n",
+    "The result of `x+y` will be `\"BruceWayne\"`. Notice that there is no additional space here: the strings are glued (concatenated) one to another, with no extra separators!\n",
     "\n",
-    "So, what happens if x = \"17\" and y = \"19\"?\n",
+    "So, what happens if `x = \"10\"` and `y = \"66\"`?\n",
     "\n",
     "It would be very bad if Python looked at these and decided that they were numbers only because they have nothing but digits. Maybe we want them concatenated (as opposed to adding them one to another)!\n",
     "\n",
-    "So, the result is &mdash; by now no longer surprisingly &mdash; \"1719\", because the strings' addition + is a concatenation, regardless of the value of the strings in question.\n",
+    "So, the result is &mdash; by now no longer surprisingly &mdash; `\"1066\"`, because for strings addition `+` is a concatenation, regardless of any numerical value the strings may represent.\n",
     "\n",
-    "How do we tell Python to \"treat these two variables as numbers\"?\n"
+    "This raises the question, how do we tell Python to treat these two variables as numbers?\n"
    ]
   },
   {
@@ -354,18 +356,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c6a70ccc-364b-4a8e-b869-a234f6f2387d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n",
+      " 2.5\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x =  4\n",
-      "y =  5.0\n",
-      "x+y =  9.0\n",
-      "This is a string: \"9.0\"\n"
+      "x =  1\n",
+      "y =  2.5\n",
+      "x+y =  3.5\n",
+      "This is a string: \"3.5\"\n"
      ]
     }
    ],
@@ -375,7 +385,7 @@
     "print(\"x = \", x)\n",
     "print(\"y = \", y)\n",
     "print(\"x+y = \", x+y)\n",
-    "z = 'This is a string: \"' + str(x+y) + '\"'\n",
+    "z = 'This is a string: \"' + str(x+y) + '\"' # Assemble a string of output\n",
     "print(z)"
    ]
   },
@@ -441,7 +451,9 @@
     "\n",
     "<table width=\"50%\">\n",
     "    <tr>\n",
-    "        <th>Operator</th><th>Name</th><th>Example</th>\n",
+    "        <th style=\"text-align:left\">Operator</th>\n",
+    "        <th style=\"text-align:left\">Name</th>\n",
+    "        <th style=\"text-align:left\">Example</th>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td>+</td><td>Addition</td><td>x + y \t</td>\n",
@@ -504,17 +516,17 @@
     "# Including Libraries\n",
     "\n",
     "- Python has a **vast** array of libraries that can perform all sorts of tasks, most importantly for this course:\n",
-    "    - input/output to file;\n",
-    "\t- mathematical special functions;\n",
-    "    - linear algebra and scientific computing;\n",
+    "    - read input from and write output to files in many formats (text, CSV, PDF ...);\n",
+    "\t- compute mathematical functions such as $\\sin(x)$, $\\log(x)$ and $\\sqrt{x}$;\n",
+    "    - do linear algebra (matrix inversion, solving linear systems) and scientific computing;\n",
     "    - plotting and data visualisation.\n",
     "- The syntax for including libraries is:\t\n",
     "~~~\n",
     "import library_name\n",
     "~~~\n",
     "- The library must be available and installed on your system.\n",
-    "- Anaconda installs by default common Scientific Computing packages such as `numpy`, `scipy` and `matplotlib`.\n",
-    "- Include statements must appear before the statements which use them."
+    "- Anaconda installs by default many common packages for scientific computing packages including `numpy`, `scipy` and `matplotlib`.\n",
+    "- Include statements must appear before the statements which use things from the libraries."
    ]
   },
   {
@@ -557,7 +569,7 @@
     "$$\n",
     "a = 1.17745, \\quad b=3, \\quad c=-1004.1, \\text{ and } x = 24.539~.\n",
     "$$\n",
-    "The functions you will need are `math.sqrt`, `math.sin`, `math.cos`, `math.exp` and `math.pow`. Look them up if required. What happens to the result of the top expression if $x=0$?. "
+    "The functions you will need are `math.sqrt`, `math.sin`, `math.cos`, `math.exp` and `math.pow`. Look them up in the [online documentation](https://docs.python.org/3/library/math.html) if you're unsure about how to use them. What happens to the result of the top expression if $x=0$?. "
    ]
   },
   {
@@ -610,15 +622,15 @@
    "source": [
     "Copy/paste this code into a new file in an IDE. Immediately you will notice some hints something is wrong. Two of the lines will be highlighted:\n",
     "\n",
-    "<img src=\"images/math60082-support-1-1.png\" alt=\"image\" width=\"25%\" height=\"auto\">\n",
+    "<img src=\"images/math60082-support-1-1.png\" alt=\"image\" width=\"40%\" height=\"auto\">\n",
     "\n",
     "with `maths` underlined, as well as `pi`\n",
     "\n",
-    "<img src=\"images/math60082-support-1-2.png\" alt=\"image\" width=\"25%\" height=\"auto\">\n",
+    "<img src=\"images/math60082-support-1-2.png\" alt=\"image\" width=\"40%\" height=\"auto\">\n",
     "\n",
     "Running the code gives the following output in the console\n",
     "\n",
-    "<img src=\"images/math60082-support-1-3.png\" alt=\"image\" width=\"25%\" height=\"auto\">\n",
+    "<img src=\"images/math60082-support-1-3.png\" alt=\"image\" width=\"70%\" height=\"auto\">\n",
     "\n",
     "so we can see that `maths` is not a module that can be found. Either you have spelt the name wrong for the module you want, or the required module is not installed. Python does not know which it is &mdash; You have to work it out! In this case we miss spelled `math` module, and to access `pi` we need to write `math.pi`. The syntax of this program is now correct.\n"
    ]
@@ -630,7 +642,7 @@
    "source": [
     "However, fixing these problems isn't the end of the story. Running the code and inputting a value of `1` we get an output:\n",
     "\n",
-    "<img src=\"images/math60082-support-1-4.png\" alt=\"image\" width=\"25%\" height=\"auto\">\n",
+    "<img src=\"images/math60082-support-1-4.png\" alt=\"image\" width=\"80%\" height=\"auto\">\n",
     "\n",
     "and we can see that there is a problem with data types. The radius of a circle is a number, so we need to tell python the input from the keyboard needs to be converted to a number.\n",
     "~~~\n",
@@ -638,7 +650,7 @@
     "~~~\n",
     "Now our program runs, but is the output what we desire? It looks ok at a glance. After entering the number 1, I get:\n",
     "\n",
-    "<img src=\"images/math60082-support-1-5.png\" alt=\"image\" width=\"25%\" height=\"auto\">\n",
+    "<img src=\"images/math60082-support-1-5.png\" alt=\"image\" width=\"80%\" height=\"auto\">\n",
     "\n",
     "so not what I was expecting. Fix the output print statement to\n",
     "~~~\n",
@@ -646,7 +658,7 @@
     "~~~\n",
     "and finally we get the desired result\n",
     "\n",
-    "<img src=\"images/math60082-support-1-6.png\" alt=\"image\" width=\"25%\" height=\"auto\">"
+    "<img src=\"images/math60082-support-1-6.png\" alt=\"image\" width=\"80%\" height=\"auto\">"
    ]
   },
   {
@@ -668,8 +680,16 @@
     "- Syntax and Structure of a Program;\n",
     "- Data and Variables;\n",
     "\n",
-    "Try out the examples on the lab workbook! [Click here to download.](https://github.com/pjohno/MATH60082-python/blob/main/MATH60082-coding-workbook-1.ipynb)\n"
+    "Try out the examples on the lab workbook! [Click here to download.](https://github.com/VenetianRed/MATH60082-python/blob/main/MATH60082-coding-workbook-1.ipynb)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a521ea9c-d595-4fee-b657-4da3b7b3209b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
