Small changes to the solutions

--- a/solutions/SLTN-coding-workbook-2.ipynb
+++ b/solutions/SLTN-coding-workbook-2.ipynb
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Roots are complex\n",
+      "Roots are complex conjugates\n",
       "x+ =  -1.0  +  1.7320508075688772 i\n",
       "x- =  -1.0  -  1.7320508075688772 i\n"
      ]
@@ -51,20 +51,20 @@
     "a=1\n",
     "b=2\n",
     "c=4\n",
-    "# calculate the determinant\n",
-    "dtmnnt = b*b - 4*a*c \n",
-    "# if dtmnnt<0 then roots are complex\n",
-    "if dtmnnt < 0.0:\n",
-    "    print(\"Roots are complex\")\n",
-    "    print(\"x+ = \",-b/a/2.,\" + \",sqrt(-dtmnnt)/a/2.0,\"i\")   \n",
-    "    print(\"x- = \",-b/a/2.,\" - \",sqrt(-dtmnnt)/a/2.0,\"i\")\n",
-    "elif dtmnnt == 0.0: # compare whether two things are equal with ==\n",
-    "    print(\"Single root\")\n",
+    "# calculate the discriminant\n",
+    "discrim = b*b - 4*a*c \n",
+    "# Root are complex if discrim < 0 \n",
+    "if discrim < 0.0:\n",
+    "    print(\"Roots are complex conjugates\")\n",
+    "    print(\"x+ = \",-b/a/2.,\" + \",sqrt(-discrim)/a/2.0,\"i\")   \n",
+    "    print(\"x- = \",-b/a/2.,\" - \",sqrt(-discrim)/a/2.0,\"i\")\n",
+    "elif discrim == 0.0: # compare whether two things are equal with ==\n",
+    "    print(\"Repeated root\")\n",
     "    print(\"x= \",-b/2.0/a)\n",
-    "else:\n",
-    "    print(\"Real roots\")\n",
-    "    print(\"x+ = \",-b/a/2.+sqrt(dtmnnt)/a/2.0)   \n",
-    "    print(\"x- = \",-b/a/2.-sqrt(dtmnnt)/a/2.0)"
+    "else: # discrimination > 0\n",
+    "    print(\"Two distinct real roots\")\n",
+    "    print(\"x+ = \",-b/a/2.+sqrt(discrim)/a/2.0)   \n",
+    "    print(\"x- = \",-b/a/2.-sqrt(discrim)/a/2.0)"
    ]
   },
   {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -85,15 +85,15 @@
      "text": [
       "fib_0:= 0\n",
       "fib_1:= 1\n",
-      "fib_ 2 := 1\n",
-      "fib_ 3 := 2\n",
-      "fib_ 4 := 3\n",
-      "fib_ 5 := 5\n",
-      "fib_ 6 := 8\n",
-      "fib_ 7 := 13\n",
-      "fib_ 8 := 21\n",
-      "fib_ 9 := 34\n",
-      "fib_ 10 := 55\n"
+      "fib_2 := 1\n",
+      "fib_3 := 2\n",
+      "fib_4 := 3\n",
+      "fib_5 := 5\n",
+      "fib_6 := 8\n",
+      "fib_7 := 13\n",
+      "fib_8 := 21\n",
+      "fib_9 := 34\n",
+      "fib_10 := 55\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
     "print( \"fib_1:=\",fibCurr)\n",
     "for i in range(1,n): # count in integers\n",
     "    fibNext = fibCurr + fibOld\n",
-    "    print( \"fib_\",i+1,\":=\",fibNext)\n",
+    "    print( \"fib_\", i+1, \" := \", fibNext, sep='')\n",
     "    fibOld = fibCurr\n",
     "    fibCurr = fibNext"
    ]
@@ -402,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Conside the first ten numbers in the Fibonacci sequence, create a table in **Latex** of the sequence. Your file should be called `fibonacci.tex` or similar, and should output the full table including a caption."
+    "6. Given $n$, create a table in $\\LaTeX$ listing the Fibonacci numbers up to $F_n$. Your file should be called `fibonacci.tex` or similar, and should output the full table including a caption."
    ]
   },
   {
