--- a/MATH60082-lab-class-2.ipynb
+++ b/MATH60082-lab-class-2.ipynb
@@ -132,7 +132,7 @@
     "- Low level algorithms implementing numerical integrations should use existing routines\n",
     "- Our job is to stage our path to a final solution and check everything works along the way\n",
     "- First task is to look up integration methods and solve the simple problem we already have a solution for when $g\\equiv1$\n",
-    "- Please see the documentation for more details, [https://docs.scipy.org/doc/scipy/tutorial/integrate.html](https://docs.scipy.org/doc/scipy/tutorial/integrate.html), the method we want to use here is `quad` from the module `scipy.integrate`."
+    "- The method we want to use here is `quad` from the module `scipy.integrate`: please see the [documentation](https://docs.scipy.org/doc/scipy/tutorial/integrate.html) for more details."
    ]
   },
   {
@@ -168,7 +168,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8824969025845955"
+       "1.0"
       ]
      },
      "execution_count": 2,
@@ -179,7 +179,7 @@
    "source": [
     "from math import exp\n",
     "integrand = lambda t: exp(-t*t/2.)\n",
-    "integrand(0.5)"
+    "integrand(0.0)"
    ]
   },
   {
@@ -191,27 +191,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.855624391892149, 9.499339003095619e-15)"
+       "(0.8556243918921488, 9.499339003095618e-15)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from scipy.integrate import quad as QUAD\n",
+    "from scipy.integrate import quad\n",
     "from math import exp\n",
     "\n",
     "integrand = lambda t: exp(-t*t/2.)\n",
     "\n",
-    "I = QUAD(integrand , 0, 1)\n",
+    "I = quad(integrand , 0, 1)\n",
     "I"
    ]
   },
@@ -224,23 +224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.34134474606854304"
+       "0.341344746068543"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from math import exp,pi,sqrt\n",
-    "I = (1./sqrt(2.*pi))*QUAD(integrand , 0, 1)[0]\n",
+    "I = (1./sqrt(2.*pi))*quad(integrand , 0, 1)[0]\n",
     "I"
    ]
   },
@@ -285,7 +285,7 @@
    ],
    "source": [
     "x = 1\n",
-    "Nx = 0.5 + (1./sqrt(2.*pi))*QUAD(integrand , 0, x)[0]\n",
+    "Nx = 0.5 + (1./sqrt(2.*pi))*quad(integrand , 0, x)[0]\n",
     "Nx"
    ]
   },
@@ -346,9 +346,9 @@
     "        return 0.\n",
     "    elif x>15.0:\n",
     "        return 1.0\n",
-    "    from scipy.integrate import quad as QUAD\n",
+    "    from scipy.integrate import quad as quad\n",
     "    from math import exp,pi,sqrt\n",
-    "    return 0.5 + (1./sqrt(2.*pi))*QUAD(lambda t: exp(-t*t/2.), 0, x)[0]\n",
+    "    return 0.5 + (1./sqrt(2.*pi))*quad(lambda t: exp(-t*t/2.), 0, x)[0]\n",
     "\n",
     "Nx_integrate(1.)"
    ]
@@ -387,9 +387,9 @@
     "        return 0.\n",
     "    elif x>upper_limit:\n",
     "        return Gx_integrate(upper_limit)\n",
-    "    from scipy.integrate import quad as QUAD\n",
+    "    from scipy.integrate import quad as quad\n",
     "    from math import exp,pi,sqrt\n",
-    "    return (1./sqrt(2.*pi))*QUAD(lambda t: exp(-t*t/2.)/(1+t*t) , lower_limit, x)[0]\n",
+    "    return (1./sqrt(2.*pi))*quad(lambda t: exp(-t*t/2.)/(1+t*t) , lower_limit, x)[0]\n",
     "\n",
     "Gx_integrate(1.)"
    ]
@@ -426,7 +426,7 @@
     "$$\n",
     "\\text{Method B} - \\text{True Solution} = 0.00001\n",
     "$$\n",
-    "we can say Method B is more accurate. However, if Method B takes significantly longer to calculate Method A, it might not be _more_ efficient.\n",
+    "we can say Method B is more accurate. However, if Method B takes significantly longer to calculate Method A, it might not be more _efficient_.\n",
     "\n",
     "If the difference in accuracy between the different functions above is close to zero, to test the efficiency of the code we only need to look at the computation times. The fastest code in this case will also be the most efficient."
    ]
