Updates for Week 3
Added some material about Big O notation.

--- a/MATH60082-lab-class-3.ipynb
+++ b/MATH60082-lab-class-3.ipynb
@@ -90,25 +90,41 @@
     "# Consistency and Convergence\n",
     "\n",
     "A quick reminder of the **consistency** and **convergence**:\n",
-    "\\pause \n",
-    "\\item Given a numerical scheme \n",
+    "Given a numerical scheme \n",
     "$$\n",
     "w^{i+1}=\\Phi(x^i,w^i;h)\n",
     "$$\n",
-    "to approximate the ODE, the scheme has a truncation error\n",
+    "to approximate the ODE, the scheme has a *truncation error*\n",
     "$$\n",
     "\\delta^h_i = \\Phi(x^i,y(x^i);h) -  y(x^{i+1})  .\n",
     "$$\n",
-    "The method is said to be consistent if\n",
+    "The method is said to be *consistent* if\n",
     "$$\n",
     "\\lim_{h\\rightarrow 0} \\frac{\\delta^h_i}{h}  = 0\n",
     "$$\n",
-    "with a convergence rate of $p$ where\n",
+    "and to have a *convergence rate* $p$ if\n",
     "$$\n",
-    "\\delta^h_i = O(h^{p+1})\n",
+    "\\delta^h_i = O(h^{p+1}).\n",
     "$$\n",
     "\n",
     "So what is the expected convergence rate of the Euler method?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mathematical aside: Big $O$ notation\n",
+    "\n",
+    "In the previous section we wrote $\\delta^h_i = O\\left(h^{p+1}\\right)$. This is an example of a notation that expresses concisely a statment about the asymtotic behaviour of a function. One typically uses it in one of two ways:\n",
+    "\n",
+    "* To describe the behaviour of some function $f(x)$ in the limit $x \\rightarrow a$, especially $a=0$. In this case the expression $$f(x) = O\\left(g(x)\\right)$$ means that there exist positive constants $\\epsilon$ and $M$ such that if $|x - a| < \\epsilon$, then $|f(x)| \\leq M |g(x)|$.\n",
+    "* To describe the behaviour of $f(x)$ in the limit $x \\rightarrow \\infty$. Here the expression $$f(x) = O\\left(g(x)\\right)$$ means that there exist positive constants $x_0$ and $M$ such that for all $x \\geq x_0$, $|f(x)| \\leq M |g(x)|$.\n",
+    "\n",
+    "It's usually clear from context which sense is being used. For example, in the previous section we were clearly interested in the limit $h \\rightarrow 0$ and so when we wrote $\\delta^h_i = O\\left(h^{p+1}\\right)$ we meant that  for all sufficiently small values of $h$, $\\delta^h_i$ is less than some multiple of $h^{p+1}.$\n",
+    "\n",
+    "Big $O$ notation is part of a family of shorthand expressions for asymptotic bounds used in, for example, analysis, number theory and theoretical computer science: see the [Wikipedia](https://en.wikipedia.org/wiki/Big_O_notation) article for details."
    ]
   },
   {
@@ -271,7 +287,7 @@
    "source": [
     "# Demo 3.2: Accuracy of the Method\n",
     "\n",
-    "Next we want to analyse the accuracy of the method. In this case we do have an analytic solution to compare against but often \n",
+    "Next we want to analyse the accuracy of the method. In our working example, we do have an analytic solution to compare against, but often \n",
     "we don't, so what can we do in that case? First, assume that if a method that converges at the rate $c$ the following holds true\n",
     "$$\n",
     "w_n = y(b) + \\frac{A}{n^{c}} + O(n^{-(c+1)}).\n",
@@ -294,7 +310,7 @@
     "c = \\frac{\\log(R)}{\\log(k)}.\n",
     "$$\n",
     "Methods that demonstrate smooth convergence have two advantages, firstly once a method is shown to be convergent you know that\n",
-    "the scheme must be stable in some sense, and secondly that extrapolation techniques can be utilised to improve accuracy."
+    "the scheme must be stable in some sense, and secondly that *extrapolation* techniques can be utilised to improve accuracy."
    ]
   },
   {
@@ -667,9 +683,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -681,9 +697,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
