--- a/MATH60082-lab-class-4.ipynb
+++ b/MATH60082-lab-class-4.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "# Lab Class - Week 4\n",
-    "## Dr P. V. Johnson\n",
+    "\n",
     "## Department of Mathematics"
    ]
   },
@@ -35,7 +35,7 @@
    "source": [
     "# Demo 4.1: Random Numbers\n",
     "\n",
-    "- A computer can **only** generate a random sequence of integers, but of course we can then take that sequence of integers and convert it to any required distribution. \n",
+    "- A computer can **only** generate a pseudorandom sequence of integers, but of course we can then take that sequence of integers and convert it to any required distribution. \n",
     "- Some of the conversions are simple but others are more complex, luckily we now have python libraries that can convert them to all standard distributions (more on this later).\n",
     "- The way random numbers work means you will always have to create a generator and then call a function to receive the next number in the sequence.\n",
     "- Reproducibility is an important feature any scientific experiment (see [this article](https://www.thesun.co.uk/news/11642959/neil-ferguson-stay-at-home-lockdown-advice-unreliable-code/) for an example of what might happen if you can't do this)"
@@ -137,7 +137,7 @@
     "- Philox\n",
     "- SFC64\n",
     "\n",
-    "We will be interested in how they perform statistically (how independent are the sequences), how fast they generate new numbers, and how easily they can be parallelised."
+    "We will be interested in how they perform statistically (how independent the sequences are), how fast they generate new numbers, and how easily they can be parallelised."
    ]
   },
   {
@@ -469,9 +469,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -483,9 +483,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
