Solutions for Week 2 lab

--- a/solutions/SLTN-lab-class-2.ipynb
+++ b/solutions/SLTN-lab-class-2.ipynb
@@ -26,6 +26,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recall that\n",
+    "$$\n",
+    "\\int_a^b \\sin(x)\\, dx = \\left[ -\\cos(x) \\right]_{a}^b = \\cos(a) - \\cos(b)\n",
+    "\\qquad \\mbox{and} \\qquad\n",
+    "\\int_a^b \\cos(x)\\, dx = \\left[\\sin(x) \\right]_{a}^b = \\sin(b) - \\sin(a).\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
