--- a/MATH60082-lab-class-10.ipynb
+++ b/MATH60082-lab-class-10.ipynb
@@ -15,7 +15,6 @@
    "source": [
     "# Lab Class - Week 10\n",
     "\n",
-    "## Dr P. V. Johnson\n",
     "## Department of Mathematics"
    ]
   },
@@ -507,9 +506,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -521,9 +520,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
