--- a/MATH60082-lab-class-3.ipynb
+++ b/MATH60082-lab-class-3.ipynb
@@ -124,7 +124,7 @@
     "\n",
     "It's usually clear from context which sense is being used. For example, in the previous section we were clearly interested in the limit $h \\rightarrow 0$ and so when we wrote $\\delta^h_i = O\\left(h^{p+1}\\right)$ we meant that  for all sufficiently small values of $h$, $\\delta^h_i$ is less than some multiple of $h^{p+1}.$\n",
     "\n",
-    "Big $O$ notation is part of a family of shorthand expressions for asymptotic bounds used in, for example, analysis, number theory and theoretical computer science: see the [Wikipedia](https://en.wikipedia.org/wiki/Big_O_notation) article for details."
+    "Big $O$ notation is part of a family of shorthand expressions for asymptotic bounds used in, for example, analysis, number theory and theoretical computer science: see the [Wikipedia](https://en.wikipedia.org/wiki/Big_O_notation) article for details. If you want to know (a lot) more about this, have a look at Chapter&nbsp; in Knuth's et al.'s excellent *Concrete Mathematics*. The library has a couple of copies, or you could get a PDF version from the [Internet Archive](https://archive.org/details/B-001-002-135/mode/2up)."
    ]
   },
   {
@@ -675,7 +675,7 @@
    "source": [
     "# Tasks\n",
     "\n",
-    "- check that you can plot out a simple graph of $x$ vs $y$ when $y(x)=sin(x)$.\n",
+    "- check that you can plot out a simple graph of $x$ vs $y$ when $y(x)=\\sin(x)$.\n",
     "- complete the functions $q$, $k^2$, $m$, $n$, $v^2$, $f$, $P$ and $V$ to solve for the option\n",
     "- edit the functions to solve the version given in your coursework, save the figure of your results, upload and complete the coursework task!"
    ]
