--- a/MATH60082-lab-class-5.ipynb
+++ b/MATH60082-lab-class-5.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "# Lab Class - Week 5\n",
-    "## Dr P. V. Johnson\n",
+    "\n",
     "## Department of Mathematics"
    ]
   },
@@ -448,9 +448,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -462,9 +462,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
