--- a/MATH60082-lab-workbook-3.ipynb
+++ b/MATH60082-lab-workbook-3.ipynb
@@ -13,9 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab Workbook - Week 3\n",
-    "## Dr P. V. Johnson\n",
-    "## Department of Mathematics"
+    "# Lab Workbook - Week 3"
    ]
   },
   {
@@ -224,9 +222,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -238,9 +236,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
