More Week 5 prep

--- a/MATH60082-lab-class-5.ipynb
+++ b/MATH60082-lab-class-5.ipynb
@@ -137,8 +137,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy\n",
-    "rng = numpy.random.default_rng(seed=0) # create a random number generator and reset the starting value"
+    "import numpy as np\n",
+    "rng = np.random.default_rng(seed=0) # create a random number generator and reset the starting value"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "n = 1000\n",
-    "ST = rng.lognormal(numpy.log(S_0) + (r-q-0.5*sigma*sigma)*T, sigma*numpy.sqrt(T), n)"
+    "ST = rng.lognormal(np.log(S_0) + (r-q-0.5*sigma*sigma)*T, sigma*np.sqrt(T), n)"
    ]
   },
   {
@@ -236,7 +236,7 @@
     "sum = 0.0\n",
     "for i in range(0,n):\n",
     "    sum += max(ST[i]-X,0.0)\n",
-    "value = sum/n *numpy.exp(-r*T)\n",
+    "value = sum/n *np.exp(-r*T)\n",
     "print(\" Call Option value:=\",value)"
    ]
   },
@@ -327,14 +327,14 @@
    "source": [
     "def monteCarlo1(S_0,T,X,r,q,sigma,n,K):\n",
     "    dt = T/K\n",
-    "    dW = rng.normal(0.0,numpy.sqrt(dt),size=(n,K))\n",
+    "    dW = rng.normal(0.0,np.sqrt(dt),size=(n,K))\n",
     "    sum = 0.0\n",
     "    for i in range(0,n):\n",
     "        St=S_0\n",
     "        for k in range(0,K):\n",
     "            St=St + (r-q)*St*dt + sigma*St*dW[i][k]\n",
     "        sum += max(St-X,0.0)\n",
-    "    return sum/n *numpy.exp(-r*T)"
+    "    return sum/n *np.exp(-r*T)"
    ]
   },
   {
@@ -344,12 +344,12 @@
    "outputs": [],
    "source": [
     "def monteCarlo2(S_0,T,X,r,q,sigma,n):\n",
-    "    WT = rng.normal(0.0,numpy.sqrt(T), n)\n",
+    "    WT = rng.normal(0.0,np.sqrt(T), n)\n",
     "    sum = 0.0\n",
     "    for i in range(0,n):\n",
-    "        STi = S_0*numpy.exp((r-q-0.5*sigma*sigma)*T+sigma*WT[i])\n",
+    "        STi = S_0*np.exp((r-q-0.5*sigma*sigma)*T+sigma*WT[i])\n",
     "        sum += max(STi-X,0.0)\n",
-    "    return sum/n *numpy.exp(-r*T)"
+    "    return sum/n *np.exp(-r*T)"
    ]
   },
   {
@@ -359,11 +359,11 @@
    "outputs": [],
    "source": [
     "def monteCarlo3(S_0,T,X,r,q,sigma,n):\n",
-    "    ST = rng.lognormal(numpy.log(S_0) + (r-q-0.5*sigma*sigma)*T, sigma*numpy.sqrt(T), n)\n",
+    "    ST = rng.lognormal(np.log(S_0) + (r-q-0.5*sigma*sigma)*T, sigma*np.sqrt(T), n)\n",
     "    sum = 0.0\n",
     "    for i in range(0,n):\n",
     "        sum += max(ST[i]-X,0.0)\n",
-    "    return sum/n *numpy.exp(-r*T)"
+    "    return sum/n *np.exp(-r*T)"
    ]
   },
   {
